# bazel-watcher

./: .travis.yml  CHANGELOG.md  WORKSPACE  go.mod  go.sum  repositories.bzl
bazel/: bazel.go
bazel/testing/: BUILD
e2e/: BUILD  ibazel.go  notification_test.go  simple_test.go
e2e/bazel/: bazel.go
e2e/notification/: BUILD.bazel  main.go
ibazel/: BUILD  command.go  command_test.go  default_command.go  ibazel.go  ibazel_test.go  main.go  main_test.go  source_event_handler.go
ibazel/command/: BUILD  command.go  command_test.go  default_command.go  default_command_test.go  notify_command.go
release/npm/: generate_package.go
