load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/notification",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "notification",
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/notification",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
    tags = ["iblaze_notify_changes"],
)
